@@ -6,8 +6,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.unice.polytech.isa</groupId>
     <artifactId>j2e</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>ISA :: Drone Delivery :: j2e</name>
+
+    <properties>
+        <versions.tomee>7.0.2</versions.tomee>
+    </properties>
 
     <build>
         <plugins>
@@ -19,12 +24,16 @@
                     <mainClass>package1.App</mainClass>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+
+        <plugin>
+                <groupId>org.apache.tomee.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>${versions.tomee}</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <!-- From TomEE to TomEE+ to support the web services stack -->
+                    <tomeeClassifier>plus</tomeeClassifier>
+                    <args>-Xmx512m -XX:PermSize=256m</args>
+                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                 </configuration>
             </plugin>
         </plugins>
